@@ -20,27 +20,20 @@ package org.matsim.contrib.drt.optimizer.rebalancing.mincostflow;
 
 import static java.util.stream.Collectors.toList;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.ToIntFunction;
+import java.util.function.ToDoubleFunction;
 import java.util.stream.Stream;
 
-import org.matsim.api.core.v01.network.Link;
 import org.matsim.contrib.drt.analysis.zonal.DrtZonalSystem;
 import org.matsim.contrib.drt.analysis.zonal.DrtZone;
 import org.matsim.contrib.drt.optimizer.rebalancing.RebalancingParams;
 import org.matsim.contrib.drt.optimizer.rebalancing.RebalancingStrategy;
+import org.matsim.contrib.drt.optimizer.rebalancing.RebalancingUtils;
 import org.matsim.contrib.drt.optimizer.rebalancing.mincostflow.AggregatedMinCostRelocationCalculator.DrtZoneVehicleSurplus;
 import org.matsim.contrib.drt.optimizer.rebalancing.targetcalculator.RebalancingTargetCalculator;
 import org.matsim.contrib.dvrp.fleet.DvrpVehicle;
 import org.matsim.contrib.dvrp.fleet.Fleet;
-import org.matsim.contrib.dvrp.schedule.Schedule;
-import org.matsim.contrib.dvrp.schedule.Schedules;
-import org.matsim.contrib.dvrp.schedule.StayTask;
-import org.matsim.contrib.dvrp.schedule.Task.TaskStatus;
 
 /**
  * @author michalm
@@ -50,11 +43,11 @@ public class MinCostFlowRebalancingStrategy implements RebalancingStrategy {
 	private final RebalancingTargetCalculator rebalancingTargetCalculator;
 	private final DrtZonalSystem zonalSystem;
 	private final Fleet fleet;
-	private final RelocationCalculator relocationCalculator;
+	private final ZonalRelocationCalculator relocationCalculator;
 	private final RebalancingParams params;
 
 	public MinCostFlowRebalancingStrategy(RebalancingTargetCalculator rebalancingTargetCalculator,
-			DrtZonalSystem zonalSystem, Fleet fleet, RelocationCalculator relocationCalculator,
+			DrtZonalSystem zonalSystem, Fleet fleet, ZonalRelocationCalculator relocationCalculator,
 			RebalancingParams params) {
 		this.rebalancingTargetCalculator = rebalancingTargetCalculator;
 		this.zonalSystem = zonalSystem;
@@ -65,57 +58,30 @@ public class MinCostFlowRebalancingStrategy implements RebalancingStrategy {
 
 	@Override
 	public List<Relocation> calcRelocations(Stream<? extends DvrpVehicle> rebalancableVehicles, double time) {
-		Map<DrtZone, List<DvrpVehicle>> rebalancableVehiclesPerZone = groupRebalancableVehicles(rebalancableVehicles,
-				time);
+		Map<DrtZone, List<DvrpVehicle>> rebalancableVehiclesPerZone = RebalancingUtils.groupRebalancableVehicles(
+				zonalSystem, params, rebalancableVehicles, time);
 		if (rebalancableVehiclesPerZone.isEmpty()) {
-			return Collections.emptyList();
+			return List.of();
 		}
-		Map<DrtZone, List<DvrpVehicle>> soonIdleVehiclesPerZone = groupSoonIdleVehicles(time);
+		Map<DrtZone, List<DvrpVehicle>> soonIdleVehiclesPerZone = RebalancingUtils.groupSoonIdleVehicles(zonalSystem,
+				params, fleet, time);
 		return calculateMinCostRelocations(time, rebalancableVehiclesPerZone, soonIdleVehiclesPerZone);
-	}
-
-	private Map<DrtZone, List<DvrpVehicle>> groupRebalancableVehicles(
-			Stream<? extends DvrpVehicle> rebalancableVehicles, double time) {
-		Map<DrtZone, List<DvrpVehicle>> rebalancableVehiclesPerZone = new HashMap<>();
-		rebalancableVehicles.filter(v -> v.getServiceEndTime() > time + params.getMinServiceTime()).forEach(v -> {
-			Link link = ((StayTask)v.getSchedule().getCurrentTask()).getLink();
-			DrtZone zone = zonalSystem.getZoneForLinkId(link.getId());
-			if (zone != null) {
-				// zonePerVehicle.put(v.getId(), zone);
-				rebalancableVehiclesPerZone.computeIfAbsent(zone, z -> new ArrayList<>()).add(v);
-			}
-		});
-		return rebalancableVehiclesPerZone;
-	}
-
-	// also include vehicles being right now relocated or recharged
-	private Map<DrtZone, List<DvrpVehicle>> groupSoonIdleVehicles(double time) {
-		Map<DrtZone, List<DvrpVehicle>> soonIdleVehiclesPerZone = new HashMap<>();
-		for (DvrpVehicle v : fleet.getVehicles().values()) {
-			Schedule s = v.getSchedule();
-			StayTask stayTask = (StayTask)Schedules.getLastTask(s);
-			if (stayTask.getStatus() == TaskStatus.PLANNED
-					&& stayTask.getBeginTime() < time + params.getMaxTimeBeforeIdle()
-					&& v.getServiceEndTime() > time + params.getMinServiceTime()) {
-				DrtZone zone = zonalSystem.getZoneForLinkId(stayTask.getLink().getId());
-				if (zone != null) {
-					soonIdleVehiclesPerZone.computeIfAbsent(zone, z -> new ArrayList<>()).add(v);
-				}
-			}
-		}
-		return soonIdleVehiclesPerZone;
 	}
 
 	private List<Relocation> calculateMinCostRelocations(double time,
 			Map<DrtZone, List<DvrpVehicle>> rebalancableVehiclesPerZone,
 			Map<DrtZone, List<DvrpVehicle>> soonIdleVehiclesPerZone) {
-		ToIntFunction<DrtZone> targetFunction = rebalancingTargetCalculator.calculate(time,
+		ToDoubleFunction<DrtZone> targetFunction = rebalancingTargetCalculator.calculate(time,
 				rebalancableVehiclesPerZone);
+		var minCostFlowRebalancingStrategyParams = (MinCostFlowRebalancingStrategyParams)params.getRebalancingStrategyParams();
+		double alpha = minCostFlowRebalancingStrategyParams.getTargetAlpha();
+		double beta = minCostFlowRebalancingStrategyParams.getTargetBeta();
 
 		List<DrtZoneVehicleSurplus> vehicleSurpluses = zonalSystem.getZones().values().stream().map(z -> {
 			int rebalancable = rebalancableVehiclesPerZone.getOrDefault(z, List.of()).size();
 			int soonIdle = soonIdleVehiclesPerZone.getOrDefault(z, List.of()).size();
-			int surplus = Math.min(rebalancable + soonIdle - targetFunction.applyAsInt(z), rebalancable);
+			int target = (int)Math.floor(alpha * targetFunction.applyAsDouble(z) + beta);
+			int surplus = Math.min(rebalancable + soonIdle - target, rebalancable);
 			return new DrtZoneVehicleSurplus(z, surplus);
 		}).collect(toList());
 
